// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`json config > order rules > should order keys in package.json 1`] = `
[
  {
    "column": 3,
    "endColumn": 20,
    "endLine": 2,
    "fix": {
      "range": [
        1,
        834,
      ],
      "text": "
  "funding": "",
  "bin": {},
  "peerDependencies": {},
  "bugs": "",
  "displayName": "",
  "contributes": {},
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "devDependencies": {}",
    },
    "line": 2,
    "message": "Expected object keys to be in specified order. 'devDependencies' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 3,
    "fix": {
      "range": [
        26,
        675,
      ],
      "text": "
  "bin": {},
  "peerDependencies": {},
  "bugs": "",
  "displayName": "",
  "contributes": {},
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "funding": "",",
    },
    "line": 3,
    "message": "Expected object keys to be in specified order. 'funding' should be after 'license'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 8,
    "endLine": 4,
    "fix": {
      "range": [
        43,
        809,
      ],
      "text": "
  "peerDependencies": {},
  "bugs": "",
  "displayName": "",
  "contributes": {},
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "bin": {},",
    },
    "line": 4,
    "message": "Expected object keys to be in specified order. 'bin' should be after 'jsdelivr'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 21,
    "endLine": 5,
    "fix": {
      "range": [
        56,
        834,
      ],
      "text": "
  "bugs": "",
  "displayName": "",
  "contributes": {},
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "peerDependencies": {}",
    },
    "line": 5,
    "message": "Expected object keys to be in specified order. 'peerDependencies' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 6,
    "fix": {
      "range": [
        82,
        723,
      ],
      "text": "
  "displayName": "",
  "contributes": {},
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "bugs": "",",
    },
    "line": 6,
    "message": "Expected object keys to be in specified order. 'bugs' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 16,
    "endLine": 8,
    "fix": {
      "range": [
        117,
        834,
      ],
      "text": "
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "contributes": {}",
    },
    "line": 8,
    "message": "Expected object keys to be in specified order. 'contributes' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 17,
    "endLine": 10,
    "fix": {
      "range": [
        160,
        834,
      ],
      "text": "
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "dependencies": {}",
    },
    "line": 10,
    "message": "Expected object keys to be in specified order. 'dependencies' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 19,
    "endLine": 11,
    "fix": {
      "range": [
        182,
        655,
      ],
      "text": "
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",",
    },
    "line": 11,
    "message": "Expected object keys to be in specified order. 'packageManager' should be after 'publisher'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 10,
    "endLine": 12,
    "fix": {
      "range": [
        206,
        791,
      ],
      "text": "
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "unpkg": "",",
    },
    "line": 12,
    "message": "Expected object keys to be in specified order. 'unpkg' should be after 'module'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 25,
    "endLine": 13,
    "fix": {
      "range": [
        221,
        834,
      ],
      "text": "
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "peerDependenciesMeta": {}",
    },
    "line": 13,
    "message": "Expected object keys to be in specified order. 'peerDependenciesMeta' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 14,
    "fix": {
      "range": [
        251,
        723,
      ],
      "text": "
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "main": "",",
    },
    "line": 14,
    "message": "Expected object keys to be in specified order. 'main' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 15,
    "fix": {
      "range": [
        265,
        809,
      ],
      "text": "
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "engines": {},",
    },
    "line": 15,
    "message": "Expected object keys to be in specified order. 'engines' should be after 'jsdelivr'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 16,
    "fix": {
      "range": [
        282,
        723,
      ],
      "text": "
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "exports": {},",
    },
    "line": 16,
    "message": "Expected object keys to be in specified order. 'exports' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 10,
    "endLine": 17,
    "fix": {
      "range": [
        299,
        834,
      ],
      "text": "
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "husky": {}",
    },
    "line": 17,
    "message": "Expected object keys to be in specified order. 'husky' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 18,
    "fix": {
      "range": [
        314,
        723,
      ],
      "text": "
  "repository": "",
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "categories": [],",
    },
    "line": 18,
    "message": "Expected object keys to be in specified order. 'categories' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 19,
    "fix": {
      "range": [
        334,
        723,
      ],
      "text": "
  "icon": "",
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "repository": "",",
    },
    "line": 19,
    "message": "Expected object keys to be in specified order. 'repository' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 20,
    "fix": {
      "range": [
        354,
        809,
      ],
      "text": "
  "scripts": {},
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "icon": "",",
    },
    "line": 20,
    "message": "Expected object keys to be in specified order. 'icon' should be after 'jsdelivr'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 21,
    "fix": {
      "range": [
        368,
        834,
      ],
      "text": "
  "name": "example-package",
  "eslintConfig": {},
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "scripts": {}",
    },
    "line": 21,
    "message": "Expected object keys to be in specified order. 'scripts' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 22,
    "fix": {
      "range": [
        96,
        414,
      ],
      "text": "
  "name": "example-package",
  "displayName": "",
  "contributes": {},
  "version": "1.0.0",
  "dependencies": {},
  "packageManager": "",
  "unpkg": "",
  "peerDependenciesMeta": {},
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},",
    },
    "line": 22,
    "message": "Expected object keys to be in specified order. 'name' should be before 'displayName'.",
    "messageId": "shouldBeBefore",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 17,
    "endLine": 23,
    "fix": {
      "range": [
        414,
        834,
      ],
      "text": "
  "description": "",
  "simple-git-hooks": {},
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "eslintConfig": {}",
    },
    "line": 23,
    "message": "Expected object keys to be in specified order. 'eslintConfig' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 21,
    "endLine": 25,
    "fix": {
      "range": [
        457,
        834,
      ],
      "text": "
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "simple-git-hooks": {}",
    },
    "line": 25,
    "message": "Expected object keys to be in specified order. 'simple-git-hooks' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 10,
    "endLine": 26,
    "fix": {
      "range": [
        483,
        809,
      ],
      "text": "
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "files": [],",
    },
    "line": 26,
    "message": "Expected object keys to be in specified order. 'files' should be after 'jsdelivr'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 14,
    "endLine": 27,
    "fix": {
      "range": [
        498,
        834,
      ],
      "text": "
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "overrides": {}",
    },
    "line": 27,
    "message": "Expected object keys to be in specified order. 'overrides' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 18,
    "endLine": 28,
    "fix": {
      "range": [
        517,
        809,
      ],
      "text": "
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "typesVersions": {},",
    },
    "line": 28,
    "message": "Expected object keys to be in specified order. 'typesVersions' should be after 'jsdelivr'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 29,
    "fix": {
      "range": [
        540,
        580,
      ],
      "text": "
  "type": "module",
  "private": false,",
    },
    "line": 29,
    "message": "Expected object keys to be in specified order. 'private' should be after 'type'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 16,
    "endLine": 31,
    "fix": {
      "range": [
        580,
        723,
      ],
      "text": "
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "sideEffects": false,",
    },
    "line": 31,
    "message": "Expected object keys to be in specified order. 'sideEffects' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 13,
    "endLine": 32,
    "fix": {
      "range": [
        604,
        723,
      ],
      "text": "
  "pnpm": {},
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "keywords": [],",
    },
    "line": 32,
    "message": "Expected object keys to be in specified order. 'keywords' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 13,
    "endLine": 33,
    "fix": {
      "range": [
        622,
        636,
      ],
      "text": "",
    },
    "line": 33,
    "message": "Unexpected pnpm settings in package.json, should move to pnpm-workspace.yaml",
    "messageId": "unexpectedPnpmSettings",
    "nodeType": "JSONProperty",
    "ruleId": "pnpm/json-prefer-workspace-settings",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 33,
    "fix": {
      "range": [
        622,
        834,
      ],
      "text": "
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "pnpm": {}",
    },
    "line": 33,
    "message": "Expected object keys to be in specified order. 'pnpm' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 25,
    "endLine": 36,
    "fix": {
      "range": [
        675,
        834,
      ],
      "text": "
  "homepage": "",
  "author": "",
  "types": "",
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "optionalDependencies": {}",
    },
    "line": 36,
    "message": "Expected object keys to be in specified order. 'optionalDependencies' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 11,
    "endLine": 38,
    "fix": {
      "range": [
        636,
        739,
      ],
      "text": "
  "author": "",
  "publisher": "",
  "license": "MIT",
  "optionalDependencies": {},
  "homepage": "",",
    },
    "line": 38,
    "message": "Expected object keys to be in specified order. 'author' should be before 'publisher'.",
    "messageId": "shouldBeBefore",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 10,
    "endLine": 39,
    "fix": {
      "range": [
        739,
        809,
      ],
      "text": "
  "resolutions": {},
  "module": "",
  "jsdelivr": "",
  "types": "",",
    },
    "line": 39,
    "message": "Expected object keys to be in specified order. 'types' should be after 'jsdelivr'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 16,
    "endLine": 40,
    "fix": {
      "range": [
        754,
        834,
      ],
      "text": "
  "module": "",
  "jsdelivr": "",
  "activationEvents": [],
  "resolutions": {}",
    },
    "line": 40,
    "message": "Expected object keys to be in specified order. 'resolutions' should be after 'activationEvents'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
]
`;

exports[`json config > order rules > should order keys in package.json 2`] = `
[
  {
    "column": 3,
    "endColumn": 25,
    "endLine": 5,
    "fix": {
      "range": [
        73,
        711,
      ],
      "text": "
  "main": "",
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "activationEvents": [],
  "contributes": {},
  "peerDependencies": {},
  "peerDependenciesMeta": {},",
    },
    "line": 5,
    "message": "Expected object keys to be in specified order. 'peerDependenciesMeta' should be after 'peerDependencies'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 6,
    "fix": {
      "range": [
        103,
        545,
      ],
      "text": "
  "engines": {},
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "main": "",",
    },
    "line": 6,
    "message": "Expected object keys to be in specified order. 'main' should be after 'bugs'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 7,
    "fix": {
      "range": [
        117,
        638,
      ],
      "text": "
  "exports": {},
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "engines": {},",
    },
    "line": 7,
    "message": "Expected object keys to be in specified order. 'engines' should be after 'bin'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 8,
    "fix": {
      "range": [
        134,
        545,
      ],
      "text": "
  "husky": {},
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "exports": {},",
    },
    "line": 8,
    "message": "Expected object keys to be in specified order. 'exports' should be after 'bugs'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 10,
    "endLine": 9,
    "fix": {
      "range": [
        151,
        809,
      ],
      "text": "
  "categories": [],
  "repository": "",
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "activationEvents": [],
  "contributes": {},
  "peerDependencies": {},
  "dependencies": {},
  "optionalDependencies": {},
  "devDependencies": {},
  "resolutions": {},
  "husky": {},",
    },
    "line": 9,
    "message": "Expected object keys to be in specified order. 'husky' should be after 'resolutions'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 10,
    "fix": {
      "range": [
        166,
        545,
      ],
      "text": "
  "repository": "",
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "categories": [],",
    },
    "line": 10,
    "message": "Expected object keys to be in specified order. 'categories' should be after 'bugs'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 15,
    "endLine": 11,
    "fix": {
      "range": [
        186,
        531,
      ],
      "text": "
  "icon": "",
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "repository": "",",
    },
    "line": 11,
    "message": "Expected object keys to be in specified order. 'repository' should be after 'homepage'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 12,
    "fix": {
      "range": [
        206,
        638,
      ],
      "text": "
  "scripts": {},
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "icon": "",",
    },
    "line": 12,
    "message": "Expected object keys to be in specified order. 'icon' should be after 'bin'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 13,
    "fix": {
      "range": [
        220,
        685,
      ],
      "text": "
  "eslintConfig": {},
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "activationEvents": [],
  "contributes": {},
  "scripts": {},",
    },
    "line": 13,
    "message": "Expected object keys to be in specified order. 'scripts' should be after 'contributes'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 17,
    "endLine": 14,
    "fix": {
      "range": [
        237,
        834,
      ],
      "text": "
  "description": "",
  "files": [],
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "activationEvents": [],
  "contributes": {},
  "peerDependencies": {},
  "dependencies": {},
  "optionalDependencies": {},
  "devDependencies": {},
  "resolutions": {},
  "simple-git-hooks": {},
  "eslintConfig": {}",
    },
    "line": 14,
    "message": "Expected object keys to be in specified order. 'eslintConfig' should be after 'simple-git-hooks'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 10,
    "endLine": 16,
    "fix": {
      "range": [
        280,
        638,
      ],
      "text": "
  "overrides": {},
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "files": [],",
    },
    "line": 16,
    "message": "Expected object keys to be in specified order. 'files' should be after 'bin'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 14,
    "endLine": 17,
    "fix": {
      "range": [
        295,
        788,
      ],
      "text": "
  "typesVersions": {},
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "activationEvents": [],
  "contributes": {},
  "peerDependencies": {},
  "dependencies": {},
  "optionalDependencies": {},
  "devDependencies": {},
  "overrides": {},",
    },
    "line": 17,
    "message": "Expected object keys to be in specified order. 'overrides' should be after 'devDependencies'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 18,
    "endLine": 18,
    "fix": {
      "range": [
        314,
        625,
      ],
      "text": "
  "private": false,
  "type": "module",
  "sideEffects": false,
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "typesVersions": {},",
    },
    "line": 18,
    "message": "Expected object keys to be in specified order. 'typesVersions' should be after 'types'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 20,
    "fix": {
      "range": [
        337,
        377,
      ],
      "text": "
  "type": "module",
  "private": false,",
    },
    "line": 20,
    "message": "Expected object keys to be in specified order. 'type' should be before 'private'.",
    "messageId": "shouldBeBefore",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 16,
    "endLine": 21,
    "fix": {
      "range": [
        377,
        545,
      ],
      "text": "
  "keywords": [],
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "sideEffects": false,",
    },
    "line": 21,
    "message": "Expected object keys to be in specified order. 'sideEffects' should be after 'bugs'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 13,
    "endLine": 22,
    "fix": {
      "range": [
        401,
        545,
      ],
      "text": "
  "pnpm": {},
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "keywords": [],",
    },
    "line": 22,
    "message": "Expected object keys to be in specified order. 'keywords' should be after 'bugs'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 13,
    "endLine": 23,
    "fix": {
      "range": [
        419,
        433,
      ],
      "text": "",
    },
    "line": 23,
    "message": "Unexpected pnpm settings in package.json, should move to pnpm-workspace.yaml",
    "messageId": "unexpectedPnpmSettings",
    "nodeType": "JSONProperty",
    "ruleId": "pnpm/json-prefer-workspace-settings",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 9,
    "endLine": 23,
    "fix": {
      "range": [
        419,
        788,
      ],
      "text": "
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",
  "author": "",
  "module": "",
  "unpkg": "",
  "jsdelivr": "",
  "types": "",
  "bin": {},
  "activationEvents": [],
  "contributes": {},
  "peerDependencies": {},
  "dependencies": {},
  "optionalDependencies": {},
  "devDependencies": {},
  "pnpm": {},",
    },
    "line": 23,
    "message": "Expected object keys to be in specified order. 'pnpm' should be after 'devDependencies'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 11,
    "endLine": 30,
    "fix": {
      "range": [
        433,
        561,
      ],
      "text": "
  "author": "",
  "publisher": "",
  "packageManager": "",
  "license": "MIT",
  "funding": "",
  "homepage": "",
  "bugs": "",",
    },
    "line": 30,
    "message": "Expected object keys to be in specified order. 'author' should be before 'publisher'.",
    "messageId": "shouldBeBefore",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
]
`;

exports[`json config > order rules > should order keys in tsconfig.json 1`] = `
[
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 2,
    "fix": {
      "range": [
        1,
        1121,
      ],
      "text": "
  "compilerOptions": {
    "strict": true,
    "moduleResolution": "node",
    "allowJs": true,
    "target": "es2020",
    "noEmit": true,
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "alwaysStrict": true
  },
  "include": ["src/**/*.ts", "src/**/*.tsx"],
  "extends": "./tsconfig.base.json",
  "references": [
    { "path": "./tsconfig.node.json" }
  ],
  "files": ["global.d.ts"],
  "exclude": []",
    },
    "line": 2,
    "message": "Expected object keys to be in specified order. 'exclude' should be after 'files'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 20,
    "endLine": 3,
    "fix": {
      "range": [
        18,
        1032,
      ],
      "text": "
  "include": ["src/**/*.ts", "src/**/*.tsx"],
  "extends": "./tsconfig.base.json",
  "compilerOptions": {
    "strict": true,
    "moduleResolution": "node",
    "allowJs": true,
    "target": "es2020",
    "noEmit": true,
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "alwaysStrict": true
  },",
    },
    "line": 3,
    "message": "Expected object keys to be in specified order. 'compilerOptions' should be after 'extends'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 4,
    "fix": {
      "range": [
        41,
        834,
      ],
      "text": "
    "moduleResolution": "node",
    "allowJs": true,
    "target": "es2020",
    "noEmit": true,
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strict": true,",
    },
    "line": 4,
    "message": "Expected object keys to be in specified order. 'strict' should be after 'types'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 23,
    "endLine": 5,
    "fix": {
      "range": [
        61,
        758,
      ],
      "text": "
    "allowJs": true,
    "target": "es2020",
    "noEmit": true,
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",",
    },
    "line": 5,
    "message": "Expected object keys to be in specified order. 'moduleResolution' should be after 'baseUrl'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 14,
    "endLine": 6,
    "fix": {
      "range": [
        93,
        834,
      ],
      "text": "
    "target": "es2020",
    "noEmit": true,
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,",
    },
    "line": 6,
    "message": "Expected object keys to be in specified order. 'allowJs' should be after 'types'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 7,
    "fix": {
      "range": [
        114,
        688,
      ],
      "text": "
    "noEmit": true,
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",",
    },
    "line": 7,
    "message": "Expected object keys to be in specified order. 'target' should be after 'composite'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 8,
    "fix": {
      "range": [
        138,
        919,
      ],
      "text": "
    "isolatedModules": true,
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noEmit": true,",
    },
    "line": 8,
    "message": "Expected object keys to be in specified order. 'noEmit' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 22,
    "endLine": 9,
    "fix": {
      "range": [
        158,
        919,
      ],
      "text": "
    "esModuleInterop": true,
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "isolatedModules": true,",
    },
    "line": 9,
    "message": "Expected object keys to be in specified order. 'isolatedModules' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 22,
    "endLine": 10,
    "fix": {
      "range": [
        187,
        919,
      ],
      "text": "
    "module": "esnext",
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "esModuleInterop": true,",
    },
    "line": 10,
    "message": "Expected object keys to be in specified order. 'esModuleInterop' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 11,
    "fix": {
      "range": [
        216,
        758,
      ],
      "text": "
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "module": "esnext",",
    },
    "line": 11,
    "message": "Expected object keys to be in specified order. 'module' should be after 'baseUrl'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 19,
    "endLine": 12,
    "fix": {
      "range": [
        240,
        919,
      ],
      "text": "
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "skipLibCheck": true,",
    },
    "line": 12,
    "message": "Expected object keys to be in specified order. 'skipLibCheck' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 24,
    "endLine": 13,
    "fix": {
      "range": [
        266,
        803,
      ],
      "text": "
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "resolveJsonModule": true,",
    },
    "line": 13,
    "message": "Expected object keys to be in specified order. 'resolveJsonModule' should be after 'paths'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 21,
    "endLine": 14,
    "fix": {
      "range": [
        297,
        919,
      ],
      "text": "
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noUnusedLocals": true,",
    },
    "line": 14,
    "message": "Expected object keys to be in specified order. 'noUnusedLocals' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 25,
    "endLine": 15,
    "fix": {
      "range": [
        325,
        919,
      ],
      "text": "
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noUnusedParameters": true,",
    },
    "line": 15,
    "message": "Expected object keys to be in specified order. 'noUnusedParameters' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 16,
    "endLine": 16,
    "fix": {
      "range": [
        357,
        919,
      ],
      "text": "
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "sourceMap": true,",
    },
    "line": 16,
    "message": "Expected object keys to be in specified order. 'sourceMap' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 17,
    "fix": {
      "range": [
        380,
        919,
      ],
      "text": "
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "outDir": "./dist",",
    },
    "line": 17,
    "message": "Expected object keys to be in specified order. 'outDir' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 14,
    "endLine": 18,
    "fix": {
      "range": [
        404,
        758,
      ],
      "text": "
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "rootDir": "./src",",
    },
    "line": 18,
    "message": "Expected object keys to be in specified order. 'rootDir' should be after 'baseUrl'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 18,
    "endLine": 19,
    "fix": {
      "range": [
        428,
        919,
      ],
      "text": "
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "declaration": true,",
    },
    "line": 19,
    "message": "Expected object keys to be in specified order. 'declaration' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 21,
    "endLine": 20,
    "fix": {
      "range": [
        453,
        919,
      ],
      "text": "
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "declarationMap": true,",
    },
    "line": 20,
    "message": "Expected object keys to be in specified order. 'declarationMap' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 35,
    "endLine": 21,
    "fix": {
      "range": [
        481,
        919,
      ],
      "text": "
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "allowSyntheticDefaultImports": true,",
    },
    "line": 21,
    "message": "Expected object keys to be in specified order. 'allowSyntheticDefaultImports' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 39,
    "endLine": 22,
    "fix": {
      "range": [
        523,
        919,
      ],
      "text": "
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "strictNullChecks": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "forceConsistentCasingInFileNames": true,",
    },
    "line": 22,
    "message": "Expected object keys to be in specified order. 'forceConsistentCasingInFileNames' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 29,
    "endLine": 23,
    "fix": {
      "range": [
        569,
        738,
      ],
      "text": "
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "experimentalDecorators": true,",
    },
    "line": 23,
    "message": "Expected object keys to be in specified order. 'experimentalDecorators' should be after 'lib'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 28,
    "endLine": 24,
    "fix": {
      "range": [
        605,
        738,
      ],
      "text": "
    "incremental": true,
    "composite": true,
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "emitDecoratorMetadata": true,",
    },
    "line": 24,
    "message": "Expected object keys to be in specified order. 'emitDecoratorMetadata' should be after 'lib'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 19,
    "endLine": 37,
    "fix": {
      "range": [
        864,
        944,
      ],
      "text": "
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true",
    },
    "line": 37,
    "message": "Expected object keys to be in specified order. 'alwaysStrict' should be before 'noImplicitAny'.",
    "messageId": "shouldBeBefore",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 3,
    "endColumn": 12,
    "endLine": 39,
    "fix": {
      "range": [
        949,
        1121,
      ],
      "text": "
  "extends": "./tsconfig.base.json",
  "references": [
    { "path": "./tsconfig.node.json" }
  ],
  "files": ["global.d.ts"],
  "include": ["src/**/*.ts", "src/**/*.tsx"]",
    },
    "line": 39,
    "message": "Expected object keys to be in specified order. 'include' should be after 'files'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
]
`;

exports[`json config > order rules > should order keys in tsconfig.json 2`] = `
[
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 4,
    "fix": {
      "range": [
        61,
        627,
      ],
      "text": "
    "skipLibCheck": true,
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "module": "esnext",",
    },
    "line": 4,
    "message": "Expected object keys to be in specified order. 'module' should be after 'baseUrl'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 19,
    "endLine": 5,
    "fix": {
      "range": [
        85,
        964,
      ],
      "text": "
    "resolveJsonModule": true,
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noEmit": true,
    "esModuleInterop": true,
    "isolatedModules": true,
    "skipLibCheck": true",
    },
    "line": 5,
    "message": "Expected object keys to be in specified order. 'skipLibCheck' should be after 'isolatedModules'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 24,
    "endLine": 6,
    "fix": {
      "range": [
        111,
        704,
      ],
      "text": "
    "noUnusedLocals": true,
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "resolveJsonModule": true,",
    },
    "line": 6,
    "message": "Expected object keys to be in specified order. 'resolveJsonModule' should be after 'paths'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 21,
    "endLine": 7,
    "fix": {
      "range": [
        142,
        887,
      ],
      "text": "
    "noUnusedParameters": true,
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noUnusedLocals": true,",
    },
    "line": 7,
    "message": "Expected object keys to be in specified order. 'noUnusedLocals' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 25,
    "endLine": 8,
    "fix": {
      "range": [
        170,
        887,
      ],
      "text": "
    "sourceMap": true,
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noUnusedParameters": true,",
    },
    "line": 8,
    "message": "Expected object keys to be in specified order. 'noUnusedParameters' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 16,
    "endLine": 9,
    "fix": {
      "range": [
        202,
        907,
      ],
      "text": "
    "outDir": "./dist",
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noEmit": true,
    "sourceMap": true,",
    },
    "line": 9,
    "message": "Expected object keys to be in specified order. 'sourceMap' should be after 'noEmit'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 13,
    "endLine": 10,
    "fix": {
      "range": [
        225,
        907,
      ],
      "text": "
    "rootDir": "./src",
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noEmit": true,
    "outDir": "./dist",",
    },
    "line": 10,
    "message": "Expected object keys to be in specified order. 'outDir' should be after 'noEmit'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 14,
    "endLine": 11,
    "fix": {
      "range": [
        249,
        627,
      ],
      "text": "
    "declaration": true,
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "rootDir": "./src",",
    },
    "line": 11,
    "message": "Expected object keys to be in specified order. 'rootDir' should be after 'baseUrl'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 18,
    "endLine": 12,
    "fix": {
      "range": [
        273,
        887,
      ],
      "text": "
    "declarationMap": true,
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "declaration": true,",
    },
    "line": 12,
    "message": "Expected object keys to be in specified order. 'declaration' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 21,
    "endLine": 13,
    "fix": {
      "range": [
        298,
        887,
      ],
      "text": "
    "allowSyntheticDefaultImports": true,
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "declarationMap": true,",
    },
    "line": 13,
    "message": "Expected object keys to be in specified order. 'declarationMap' should be after 'noImplicitThis'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 35,
    "endLine": 14,
    "fix": {
      "range": [
        326,
        907,
      ],
      "text": "
    "forceConsistentCasingInFileNames": true,
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noEmit": true,
    "allowSyntheticDefaultImports": true,",
    },
    "line": 14,
    "message": "Expected object keys to be in specified order. 'allowSyntheticDefaultImports' should be after 'noEmit'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 39,
    "endLine": 15,
    "fix": {
      "range": [
        368,
        936,
      ],
      "text": "
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "baseUrl": ".",
    "moduleResolution": "node",
    "paths": {
      "@/*": ["src/*"]
    },
    "types": ["node", "jest"],
    "allowJs": true,
    "strict": true,
    "strictNullChecks": true,
    "alwaysStrict": true,
    "noImplicitAny": true,
    "noImplicitThis": true,
    "noEmit": true,
    "esModuleInterop": true,
    "forceConsistentCasingInFileNames": true,",
    },
    "line": 15,
    "message": "Expected object keys to be in specified order. 'forceConsistentCasingInFileNames' should be after 'esModuleInterop'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 29,
    "endLine": 16,
    "fix": {
      "range": [
        414,
        607,
      ],
      "text": "
    "emitDecoratorMetadata": true,
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "experimentalDecorators": true,",
    },
    "line": 16,
    "message": "Expected object keys to be in specified order. 'experimentalDecorators' should be after 'lib'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
  {
    "column": 5,
    "endColumn": 28,
    "endLine": 17,
    "fix": {
      "range": [
        450,
        607,
      ],
      "text": "
    "incremental": true,
    "composite": true,
    "target": "es2020",
    "jsx": "react",
    "lib": ["es2020", "dom"],
    "emitDecoratorMetadata": true,",
    },
    "line": 17,
    "message": "Expected object keys to be in specified order. 'emitDecoratorMetadata' should be after 'lib'.",
    "messageId": "shouldBeAfter",
    "nodeType": null,
    "ruleId": "jsonc/sort-keys",
    "severity": 2,
  },
]
`;
